src/App.css
#root {
  width: 100vw;
  margin: 0 auto;
  padding: 1rem;
  text-align: center;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: space-between;
  min-height: var(--viewport-height, 75vh);
  flex-direction: column;
}

:root {
  --border-radius: 18px;
  --background-color: white;
  --accent-color: rgba(0, 0, 0, 0.9)
}

.vertical-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}



.horizontal-container {
  display: flex;
  width: 100%;
  flex-direction: row;
  justify-content: center;
  text-align: center;
  align-items: center;
}

.align-left {
  align-items: center;
  text-align: left;
  justify-content: flex-start;
}

.card-container {
  display: flex;
  flex-direction: row;
  max-width: 600px;
  position: relative;
  width: 100%;
}

.container {
  display: flex;
  justify-content: center;
  width: 100%;
  flex: 1 1 auto;
  z-index: 2;
}

.swipe {
  position: absolute;
  cursor: pointer;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  border-radius: var(--border-radius);

}

.swipe:active {
  cursor: grabbing;
}

.shadow {
  box-shadow: 0px 10px 42px -4px rgba(46, 46, 46, 0.25);
}

.swipe-rotate-left {
  transform: rotate(-6deg);
}

.swipe-rotate-right {
  transform: rotate(6deg);
}

.card {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  border-radius: var(--border-radius);
  background-color: var(--background-color);
}

.card-placeholder {
  background: white;
  border-radius: var(--border-radius);
  
}

.row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  justify-content: center;
  padding-top: 20px;
}

.card-image {
  aspect-ratio: 16/9;
  display: flex;
  flex: 1 1 175px;
  border-radius: var(--border-radius) var(--border-radius) 0 0;
  object-fit: cover;
}

.chip {
  display: inline-block;
  justify-content: center;
  align-items: center;
  padding: 0.25rem 1rem;
  border-radius: 50px;
  background: linear-gradient(98deg, #367966 9.99%, #058F71 94.61%);
}

.chip-label {
  font-size: 14px;
  text-wrap: nowrap;
  font-weight: 500;
  margin: 0;
  color: white;
}

.text-area {
  display: flex;
  flex-direction: column;
  position: relative;
  text-align: left;
  z-index: 9;
  flex: 1 0 200px;
  padding: 1rem;
  background-color: var(--background-color);
  border-radius: 0 0 var(--border-radius) var(--border-radius);
}

.scrollable-text {
  overflow-y: auto;
  max-height: 100px;
  height: 100%;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.scrollable-text-shadow {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 20px; /* Adjust the height of the shadow as needed */
  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
  pointer-events: none;
  border-radius: 0 0 var(--border-radius) var(--border-radius);
}

.scrollable-text::-webkit-scrollbar {
  display: none;
}

.tag-line {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 0.5rem;
  align-items: baseline;
}

.round-button {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  background-color: var(--background-color);
  height: 75px;
  width: 75px;
  box-shadow: 0px 2px 12px 0px rgba(52, 54, 64, 0.25);
}

.round-button-icon {
  display: flex;
  align-items: center;
}

.button-row {
  display: flex;
  margin-top: 1rem;
  gap: 1rem;
  width: 100%;
  align-items: center;
  justify-content: center;
}

